k3s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: document-storage
  labels:
    name: document-storage
    app: dms
